- add lazy nats setup on startup